syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.notification.grpc";
option java_outer_classname = "NotificationProto";

package notification;

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  int64 sender_id = 1;
  int64 recipient_id = 2;
  NotificationEventType event_type = 3;
}

message NotificationResponse {
  bool success = 1;
}

enum NotificationEventType {
  UNKNOWN = 0;
  FRIEND_REQUEST = 1;
  FRIEND_ACCEPT = 2;
}
